[package]
name = "distinct"
version = "0.1.1"
authors = ["JarredAllen <jarredallen73@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Two traits for enforcing that two types either must be the same or must be different."
repository = "https://github.com/JarredAllen/distinct"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
